--- a/public/styles.css
+++ b/public/styles.css
@@ -13,10 +13,12 @@ body {
 #sidebar {
     width: 25%;
     background-color: #f1f1f1;
-    border-right: 1px solid #ccc;
     display: flex;
     flex-direction: column;
     padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #user-list {
@@ -29,20 +31,46 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 5px;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    color: white;
+    background-color: #1a89ff;
     text-align: left;
     cursor: pointer;
+    border-radius: 10px;
+    border: #ffffff00;
 }
 
 .user-button:hover {
-    background-color: #e6e6e6;
+    background-color: #006adc;
+}
+
+.fuction-button {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #000000;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.logger-button {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #ffffff00;
+    color: rgb(0, 0, 0);
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 #chat-window {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    margin: 5px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 1px, #000000;
 }
 
 #chat-container {
@@ -53,19 +81,42 @@ body {
     border-bottom: 1px solid #ccc;
 }
 
+.chat_header {
+    padding: 5px;
+    background-color: #007bff;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px 10px 0 0;
+}
+
 .chat-message {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     word-wrap: break-word;
+    /* width: 100%; */
+    padding: 10px;
+    margin-bottom: 5px;
+   
+    /* text-align: left; */
+    border-radius: 20px;
+    cursor: pointer;
+    border: #ffffff00;
+    color: white;
 }
 
 .sent-message {
+    background-color: #007bff;
+    margin-right: 10px;
+    padding-right: 30px;
     text-align: right;
-    color: blue;
 }
 
 .received-message {
+    background-color: #4b4b4b;
+    margin-left: 10px;
+    padding-left: 30px;
     text-align: left;
-    color: green;
 }
 
 #chat-input {
@@ -73,6 +124,7 @@ body {
     padding: 10px;
     border-top: 1px solid #ccc;
     background-color: #fff;
+    border-radius: 0 0 10px 10px;
 }
 
 #message-input {
@@ -91,9 +143,77 @@ body {
     color: white;
     cursor: pointer;
     border-radius: 5px;
+    margin-right: 10px;
 }
 
 #send-button:hover,
 #upload-file-button:hover {
     background-color: #0056b3;
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    /* padding: 20px; */
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    border-radius: 10px;
+}
+
+.model-block {
+    padding:0px 40px 20px 40px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.modal-header {
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: #007bff;
+    padding: 10px;
+    border-radius: 10px 10px 0 0;
+    color: white;
+}
+
+.close-button {
+    color: #ffffff;
+    float: right;
+    font-weight: bold;
+    padding: 10px;
+    background-color: red;
+    border-radius: 0 10px 0 0;
+}
+
+.modal-input {
+    flex-grow: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
